# MinecraftPP

./: .clang-format  .gitmodules  CMakeLists.txt  TODO.md
assets/textures/block/: end_portal_frame_eye.png.mcmeta  end_portal_frame_eye_2.png.mcmeta  end_portal_frame_eye_3.png.mcmeta  end_portal_frame_eye_4.png.mcmeta  end_portal_frame_eye_5.png.mcmeta  end_portal_frame_eye_6.png.mcmeta  lantern.png.mcmeta
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: fragment.glsl  vertex.glsl
src/: game.cpp  game.h  main.cpp
src/game/: biome_registry.h  biomes.cpp  biomes.h  block_registry.h  blocks.cpp  blocks.h  chunk.h  terrain_generator.cpp  terrain_generator.h  world.cpp  world.h
src/graphics/: block_texture_atlas.cpp  block_texture_atlas.h  camera.cpp  camera.h  chunk_mesh.cpp  chunk_mesh.h  chunk_mesher.cpp  chunk_mesher.h  drawable.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.h  texture_atlas.cpp  texture_atlas.h
src/graphics/mesh/: chunk_mesher.cpp  chunk_mesher.h  mesh.cpp  mesh.h
src/util/: directions.h  frustum.h  key_codes.h  perlin_noise.cpp  perlin_noise.h  spline.cpp  spline.h  thread_pool.h  uv_rect.h  window.cpp  window.h
